--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+::-webkit-scrollbar {
+    width: 6px;
+    height: 4px
+}
+
+::-webkit-scrollbar-button {
+    width: 0;
+    height: 0
+}
+
+::-webkit-scrollbar-track {
+    background-color: #444
+}
+
+::-webkit-scrollbar-track-piece {
+    background-color: #282828;
+    -webkit-border-radius: 6px
+}
+
+::-webkit-scrollbar-thumb {
+    height: 50px;
+    background-color: #2ecc71
+}
+
+::-webkit-scrollbar-corner {
+    background-color: #444
+}
+
+::-webkit-scrollbar-thumb:vertical {
+    -webkit-border-radius: 6px;
+    background: #666
+}
